# sparklehub-cli

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg  techstack.md  techstack.yml
.github/workflows/: pythonpackage.yml
sparklehub/: consts.py  main.py
sparklehub/helpers/: macos_keychain.py  signature.py  test_signature.py
sparklehub/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
sparklehub/openapi_client/api/: __init__.py  channels_api.py  packages_api.py  releases_api.py  relnotes_api.py
sparklehub/openapi_client/docs/: Channel.md  ChannelsApi.md  Package.md  PackagesApi.md  Release.md  ReleaseNote.md  ReleasesApi.md  RelnotesApi.md
sparklehub/openapi_client/models/: __init__.py  channel.py  package.py  release.py  release_note.py
sparklehub/openapi_client/test/: test_channel.py  test_channels_api.py  test_package.py  test_packages_api.py  test_release.py  test_release_note.py  test_releases_api.py  test_relnotes_api.py
